# rPhobos

./: .gitignore  .todo  README.md
builder/: Cargo.toml  config.jsonc
builder/src/: editor.rs  main.rs  util.rs
installer/: Cargo.toml
installer/src/: config.rs  injector.rs  main.rs  utils.rs
rootkit/: Cargo.toml
rootkit/src/: config.rs  fs.rs  lib.rs  registry.rs  state.rs
