[package]
name = "rootkit"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader"
]
